[tool.poetry]
name = "mlflow-tutorial"
version = "0.1.0"
description = "mlflow tutorial"
authors = ["Klim Belousov <klsbeousov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
scikit-learn = "1.4.2"
mlflow = "2.12.2"
pandas = "2.2.2"
setuptools = "^69.5.1"
keras = "^3.3.3"
tensorflow = "^2.16.1"
optuna = "^3.6.1"
xgboost = "^2.0.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
